fix: align footer elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,10 +750,20 @@ h1 {
 
   /*---------------------- Footer  media query ------*/
 
-  .contact {
+  .footer-content{
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  }
+  .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .find-us{
+    align-items: flex-start;
   }
 
   .find-us p {
